--- a/ParseLiveQuery tvos example/Base.lproj/Main.storyboard
+++ b/ParseLiveQuery tvos example/Base.lproj/Main.storyboard
@@ -1,24 +1,71 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="6185.10" systemVersion="14A360a" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="NO" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" initialViewController="iQl-7I-Rhn">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6181.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="2rG-31-dRJ">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="iQl-7I-Rhn" customClass="ViewController" customModule="tvosTest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="crW-Wm-Nfi"/>
+                        <viewControllerLayoutGuide type="bottom" id="eo8-mh-GDa"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                    <view key="view" contentMode="scaleToFill" id="JMT-cz-irc">
+                        <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rmg-80-TbE">
+                                <rect key="frame" x="760" y="497" width="400" height="86"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="400" id="prv-wd-9UB"/>
+                                </constraints>
+                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                <state key="normal" title="START"/>
+                                <connections>
+                                    <action selector="toggle:" destination="iQl-7I-Rhn" eventType="primaryActionTriggered" id="JJS-dG-3aR"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KKb-ai-hrB">
+                                <rect key="frame" x="1118" y="591" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UPw-GN-DkG">
+                                <rect key="frame" x="760" y="591" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GPu-Bx-Ecx">
+                                <rect key="frame" x="939" y="591" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rmg-80-TbE" firstAttribute="centerY" secondItem="JMT-cz-irc" secondAttribute="centerY" id="7NY-Kl-bNp"/>
+                            <constraint firstItem="GPu-Bx-Ecx" firstAttribute="centerX" secondItem="rmg-80-TbE" secondAttribute="centerX" id="CCi-db-7Qn"/>
+                            <constraint firstItem="KKb-ai-hrB" firstAttribute="trailing" secondItem="rmg-80-TbE" secondAttribute="trailing" id="abs-Mn-omB"/>
+                            <constraint firstItem="KKb-ai-hrB" firstAttribute="top" secondItem="rmg-80-TbE" secondAttribute="bottom" constant="8" id="fxY-A4-RCD"/>
+                            <constraint firstItem="GPu-Bx-Ecx" firstAttribute="top" secondItem="rmg-80-TbE" secondAttribute="bottom" constant="8" id="iga-Zj-ZRl"/>
+                            <constraint firstItem="rmg-80-TbE" firstAttribute="centerX" secondItem="JMT-cz-irc" secondAttribute="centerX" id="ofB-5F-xqC"/>
+                            <constraint firstItem="UPw-GN-DkG" firstAttribute="leading" secondItem="rmg-80-TbE" secondAttribute="leading" id="qal-eM-HdM"/>
+                            <constraint firstItem="UPw-GN-DkG" firstAttribute="top" secondItem="rmg-80-TbE" secondAttribute="bottom" constant="8" id="tTh-uL-mys"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="numberCreatedLabel" destination="KKb-ai-hrB" id="0zj-02-ZdB"/>
+                        <outlet property="numberTotalLabel" destination="GPu-Bx-Ecx" id="2n8-fa-c8N"/>
+                        <outlet property="numberUpdatedLabel" destination="UPw-GN-DkG" id="S7v-6l-z7O"/>
+                        <outlet property="toggleButton" destination="rmg-80-TbE" id="hpB-eS-qYC"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ftr-9s-5hc" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
